Delete Unnecessary files

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class='fc'>
         <header id="banner">
             <span id="logo">
-                    <img src="images/logo2.svg" alt="random quote machine" />
+                    <img src="images/logo.svg" alt="random quote machine" />
                     <i>Random Quote Machine</i>
                 </span>
         </header>
