--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </footer>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="js/get-quotes.js"></script>
+    <script src="js/getquotes.js"></script>
     <!--<script src="https://platform.twitter.com/widgets.js"></script> -->
     <script src="js/twitter-window.js"></script>
 </body>
