Update social link colors
updated social link colors in footer
small changes in theme.css to improve appearence

--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
                 <span>developed by <strong> Srikanth K</strong></span></br>
                 API : <a href="https://forismatic.com/en/api/" target="_blank" title="Quotes source API"> https://forismatic.com/en/api/</a>
             </section>
+            <section class="contact">
+            </section>
 
         </footer>
     </div>
