Update Theme and Fix footer
theme improved version added
footer broken part fixed

--- a/index.html
+++ b/index.html
@@ -18,9 +18,10 @@
 
         <section class="quotes-flex-container">
             <div class="quotes-box">
+
                 <blockquote id="quote-text">
 
-                    <i class="fa fa-refresh fa-spin fa-2x fa-fw"></i>
+                    <i class="fa fa-spinner fa-pulse fa-3x loading-spin" aria-hidden="true"></i>
                     <span class="sr-only">Loading...</span>
 
                 </blockquote>
@@ -41,11 +42,9 @@
             </section>
             <section class="site-info">
                 <p>developed by <b> Srikanth K</b></p>
-                <p class="api-link">Source : <a href="https://forismatic.com/en/api/" target="_blank" title="Quotes source API"> https://forismatic.com/en/api/</a></p>
-                <p></p>
-                <hr>
+                <!-- <p class="api-link">Source : <a href="https://forismatic.com/en/api/" target="_blank" title="Quotes source API"> https://forismatic.com/en/api/</a></p>-->
                 <p class="github-link"><a href="https://github.com/srikanthkanjarla/Random-Quote-Machine" target="_blank" title="Github Repository"> github.com/srikanthkanjarla/Random-Quote-Machine</a></p>
-
+                <p>© Copyright 2017</p>
             </section>
             <section class="contact">
 
