Update layout to fix buttons
move buttons box outside from quotes box
to stop the buttons moving up and down on getting new quote

--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
                 </blockquote>
                 <p id='quote-author'></p>
             </div>
-            <div class="quote-btn-box">
-                <a href="" id="get-quote" class="btn"><i class="fa fa-refresh fa-lg" aria-hidden="true"></i> New Quote</a>
-                <a href="" id="tweet-quote" class="btn"><i class="fa fa-twitter fa-lg" aria-hidden="true"></i> Tweet</a>
-            </div>
+        </section>
+        <section class="quote-btn-box">
+            <a href="" id="get-quote" class="btn"><i class="fa fa-refresh fa-lg" aria-hidden="true"></i> New Quote</a>
+            <a href="" id="tweet-quote" class="btn"><i class="fa fa-twitter fa-lg" aria-hidden="true"></i> Tweet</a>
         </section>
 
         <footer class="footer-flex-container">
