--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
                 <a href="https://twitter.com/srikanthkanjarl" target="_balnk" title="Twitter Profile"><i class="fa fa-twitter " aria-hidden="true"></i></a>
             </section>
             <section class="site-info">
-                <p>developed by <b> Srikanth K</b></p>
+                <p>developed by <b> Srikanth</b></p>
                 <!-- <p class="api-link">Source : <a href="https://forismatic.com/en/api/" target="_blank" title="Quotes source API"> https://forismatic.com/en/api/</a></p>-->
-                <p class="github-link"><a href="https://github.com/srikanthkanjarla/Random-Quote-Machine" target="_blank" title="Github Repository"> github.com/srikanthkanjarla/Random-Quote-Machine</a></p>
+                <p class="github-repo"><a href="https://github.com/srikanthkanjarla/Random-Quote-Machine" target="_blank" title="Github Repository">https://github.com/srikanthkanjarla/Random-Quote-Machine</a></p>
                 <p>© Copyright 2017</p>
             </section>
             <section class="contact">
