Added attribution to API source in footer
added powered by attribution to API source

--- a/index.html
+++ b/index.html
@@ -35,10 +35,8 @@
             <a href="https://twitter.com/srikanthkanjarl" target="_blank" title="Twitter Profile"><i class="fa fa-twitter " aria-hidden="true"></i></a>
         </address>
         <div class="site-info">
-
-            <!-- <p class="api-link">Source : <a href="https://forismatic.com/en/api/" target="_blank" title="Quotes source API"> https://forismatic.com/en/api/</a></p>-->
             <p class="github-repo"><a href="https://github.com/srikanthkanjarla/Random-Quote-Machine" target="_blank" title="Github Repository">https://github.com/srikanthkanjarla/Random-Quote-Machine</a></p>
-
+            <p class="api-link"><a href="https://forismatic.com/en/api/" target="_blank" title="Quotes source API"> https://forismatic.com/en/api/</a></p>
         </div>
         <div class="w3c-valid">
             <p>
